modified user routes
